# DataSentinel

./: .dockerignore  .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/Engine/: CMakeLists.txt  main.cpp
cpp/Engine/include/: AnomalyDetector.hpp  ClientSession.hpp  Config.hpp  ConfigLoader.hpp  GrpcServer.hpp  IInferenceBackend.hpp  InferenceBackendFactory.hpp  InputParser.hpp  Logger.hpp  OnnxInferenceBackend.hpp  TcpServer.hpp  TensorRtBuildOptions.hpp  TensorRtEngineBuilder.hpp  TensorRtEnginePathResolver.hpp  TensorRtEngineStore.hpp  TensorRtInferenceBackend.hpp
cpp/Engine/src/: AnomalyDetector.cpp  ClientSession.cpp  ConfigLoader.cpp  GrpcServer.cpp  InferenceBackendFactory.cpp  InputParser.cpp  OnnxInferenceBackend.cpp  TcpServer.cpp  TensorRtEngineBuilder.cpp  TensorRtEnginePathResolver.cpp  TensorRtEngineStore.cpp  TensorRtInferenceBackend.cpp
docker/: compose.yaml
docker/engine/: Dockerfile  Dockerfile.trt  Dockerfile.trt-base
docker/producer/: Dockerfile
docker/trainer/: Dockerfile  Dockerfile.gpu
proto/: inference.proto
python/producer/: producer.py
python/trainer/: dataset.py  requirements.txt  train.py
python/trainer/data/: train.csv
scripts/: buildEngine.sh  cleanEngine.sh  cleanModels.sh  initEnv.sh  runEngine.sh  runProducer.sh  runTrainer.sh  train.sh
scripts/docker/: downDockerStack.sh  killAllContainers.sh  runEngineDocker.sh  runProducerDocker.sh  runTrainerDocker.sh  upDockerStack.sh
